--- a/package.json
+++ b/package.json
@@ -63,7 +63,12 @@
   "homepage": "https://github.com/aurelia/skeleton-navigation#readme",
   "aurelia": {
     "build": {
-      "resources": []
+      "resources": [
+        "aurelia-gravatar-component/gravatar"
+      ]
+    },
+    "moduleRootOverride": {
+      "aurelia-gravatar-component": "dist/commonjs/gravatar.js"
     }
   },
   "dependencies": {
@@ -71,6 +76,7 @@
     "aurelia-event-aggregator": "^1.0.0",
     "aurelia-fetch-client": "^1.0.0",
     "aurelia-framework": "^1.0.0",
+    "aurelia-gravatar-component": "0.0.3",
     "aurelia-history-browser": "^1.0.0",
     "aurelia-loader-webpack": "^1.0.0",
     "aurelia-logging-console": "^1.0.0",
